// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with loading and disabled prop correctly 1`] = `
.c2 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  cursor: not-allowed;
}

.c0 svg {
  fill: #FFFFFF;
  -webkit-animation: bKPVWD 1s linear infinite;
  animation: bKPVWD 1s linear infinite;
}

.c0:hover {
  color: #FFFFFF;
  background-color: #FC6145;
  border-color: #FC6145;
}

.c0:hover svg {
  fill: #FFFFFF;
  -webkit-animation: bKPVWD 1s linear infinite;
  animation: bKPVWD 1s linear infinite;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c1 {
  height: 24px;
  width: 24px;
  margin-right: 4px;
}

<div>
  <button
    class="c0"
    disabled=""
    mode="text"
  >
    <div
      class="c1"
    >
      <svg />
    </div>
    <span
      class="c2"
    />
  </button>
</div>
`;

exports[`Button renders a button with loading prop correctly 1`] = `
.c2 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  cursor: pointer;
}

.c0 svg {
  fill: #FFFFFF;
  -webkit-animation: bKPVWD 1s linear infinite;
  animation: bKPVWD 1s linear infinite;
}

.c0:hover {
  color: #FFFFFF;
  background-color: #FC6145;
  border-color: #FC6145;
}

.c0:hover svg {
  fill: #FFFFFF;
  -webkit-animation: bKPVWD 1s linear infinite;
  animation: bKPVWD 1s linear infinite;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c1 {
  height: 24px;
  width: 24px;
  margin-right: 4px;
}

<div>
  <button
    class="c0"
    mode="text"
  >
    <div
      class="c1"
    >
      <svg />
    </div>
    <span
      class="c2"
    />
  </button>
</div>
`;

exports[`Button renders a button with small prop correctly 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 32px;
  border-radius: 4px;
  padding: 6px 12px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  cursor: pointer;
}

.c0 svg {
  fill: #FFFFFF;
}

.c0:hover {
  color: #FFFFFF;
  background-color: #FC6145;
  border-color: #FC6145;
}

.c0:hover svg {
  fill: #FFFFFF;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

<div>
  <button
    class="c0"
    mode="text"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a primary button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  cursor: pointer;
}

.c0 svg {
  fill: #FFFFFF;
}

.c0:hover {
  color: #FFFFFF;
  background-color: #FC6145;
  border-color: #FC6145;
}

.c0:hover svg {
  fill: #FFFFFF;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

<div>
  <button
    class="c0"
    mode="text"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a primary icon button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  cursor: pointer;
}

.c0 svg {
  fill: #FFFFFF;
}

.c0:hover {
  color: #FFFFFF;
  background-color: #FC6145;
  border-color: #FC6145;
}

.c0:hover svg {
  fill: #FFFFFF;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

<div>
  <button
    class="c0"
    mode="icon"
  >
    <svg />
  </button>
</div>
`;

exports[`Button renders a secondary button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  color: #5D2DEF;
  cursor: pointer;
}

.c0 svg {
  fill: #5D2DEF;
}

.c0:hover {
  color: #FC6145;
  background-color: #FFFFFF;
  border-color: #FC6145;
}

.c0:hover svg {
  fill: #FC6145;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

<div>
  <button
    class="c0"
    mode="text"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a secondary icon button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  color: #5D2DEF;
  cursor: pointer;
}

.c0 svg {
  fill: #5D2DEF;
}

.c0:hover {
  color: #FC6145;
  background-color: #FFFFFF;
  border-color: #FC6145;
}

.c0:hover svg {
  fill: #FC6145;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

<div>
  <button
    class="c0"
    mode="icon"
  >
    <svg />
  </button>
</div>
`;

exports[`Button renders a tertiary button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 0px;
  border-color: transparent;
  background-color: transparent;
  color: #5D2DEF;
  cursor: pointer;
}

.c0 svg {
  fill: #5D2DEF;
}

.c0:hover {
  color: #FC6145;
  background-color: transparent;
  border-color: transparent;
}

.c0:hover:after {
  content: "";
  width: 100%;
  position: absolute;
  height: 2px;
  left: 0;
  bottom: 0;
  background: #FC6145;
}

.c0:hover svg {
  fill: #FC6145;
}

.c0:focus:not(:hover):after {
  content: "";
  width: 100%;
  position: absolute;
  height: 4px;
  left: 0;
  bottom: 0;
  background: rgba(93,45,239,0.32);
}

<div>
  <button
    class="c0"
    mode="text"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a tertiary icon button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px;
  border-color: transparent;
  background-color: transparent;
  color: #5D2DEF;
  cursor: pointer;
}

.c0 svg {
  fill: #5D2DEF;
}

.c0:hover {
  color: #FC6145;
  background-color: transparent;
  border-color: transparent;
}

.c0:hover svg {
  fill: #FC6145;
}

.c0:focus {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

<div>
  <button
    class="c0"
    mode="icon"
  >
    <svg />
  </button>
</div>
`;
